@@ -1,11 +1,15 @@
 debci (0.7) UNRELEASED; urgency=medium
 
+  [ Antonio Terceiro ]
   * debci-batch: put packages with fastest testsuites first in the queue
   * debci-generate-feeds: allow generating feeds for specific packages
   * debci-generate-index: update package feed right away when indexing
     individual packages
   * debian-status: avoid generating invalid JSON in the presence of packages
     without status files
+
+  [ Martin Pitt ]
+  * Fix report_status() to work for bash scripts.
 
  -- Antonio Terceiro <terceiro@debian.org>  Fri, 16 May 2014 12:55:41 -0300
 
